--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,7 +8,8 @@
   <div class="col-md-2">
     
   <section class="chef_info center">
-    
+    <%= gravatar_for recipe.chef, size: 100 %>
+    <h5>Chef name: <%= recipe.chef.chefname %></h5>
   </section>
   </div>
   
