--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,4 @@
-<h1>All Recipes</h1>
-<hr/>
+<%= render 'shared/page_title', title: "All Recipes" %>
 
 <% @recipes.each do |recipe| %>
 
@@ -14,7 +13,7 @@
   </div>
   
   <div class="col-lg-8 well">
-    <h4><%= link_to recipe.name, " " %></h4>
+    <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
     <P><%= recipe.summary %></P>
     <p>
       <span class= 'quiet'><small><%= time_ago_in_words(recipe.created_at) %></small></span>
@@ -23,5 +22,6 @@
   </div>
   
 </div>
+<hr/>
 
 <% end %>
