--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,11 +1,11 @@
 <%= render 'shared/page_title', title: "All Recipes" %>
 
-<% @recipes.each do |recipe| %>
+<%= will_paginate %>
 
+<% @recipes.each do |recipe| %>
 <div class="row">
-  
+
   <div class="col-md-2">
-    
   <section class="chef_info center">
     <%= gravatar_for recipe.chef, size: 100 %>
     <h5>Chef name: <%= recipe.chef.chefname %></h5>
@@ -16,8 +16,17 @@
     <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
     <P><%= recipe.summary %></P>
     <p>
-      <span class= 'quiet'><small><%= time_ago_in_words(recipe.created_at) %></small></span>
+      <span class= 'quiet'><small> created: <%= time_ago_in_words(recipe.created_at) %> ago, </small></span>
+      <span class= 'quiet'><small> updated: <%= time_ago_in_words(recipe.updated_at) %> ago</small></span>
     </p>
+    <div class="pull-right">
+        <%= link_to like_recipe_path(recipe, like: true), method: :post do %>
+          <i class="glyphicon glyphicon-thumbs-up"></i> &nbsp <%= recipe.thumbs_up_total %>
+        <% end %> &nbsp&nbsp&nbsp&nbsp
+        <%= link_to like_recipe_path(recipe, like: false), method: :post do %>
+          <i class="glyphicon glyphicon-thumbs-down"></i> &nbsp <%= recipe.thumbs_down_total %>
+        <% end %>
+      </div>
   </div>
   <div class="col-md-4">
     <%= image_tag(recipe.picture.url, size: "250x150", class: "gravatar") if recipe.picture? %>
@@ -25,5 +34,6 @@
   
 </div>
 <hr/>
-
 <% end %>
+
+<%= will_paginate %>
