--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,6 +34,12 @@ body{
   margin-top: 20px;
 }
 
+.nav_ul_item {
+  padding-left: 25px;
+  float: left;
+  margin-top: 20px;
+}
+
 .center {
   text-align: center;
 }
@@ -85,6 +91,10 @@ input, textarea, select, .uneditable-input{
   border-radius: 5px;
   width: 100%;
   margin-bottom: 15px;
+}
+
+.input_checkbox input {
+  width: auto !important;
 }
 
 input {
